--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,3 +12,6 @@ phases:
   post_build:
     commands:
       - docker push 474011752432.dkr.ecr.us-east-1.amazonaws.com/music:latest
+   
+  artifacts:
+      files: imagedefinitions.json
